--- a/Web_Fund_Dec2021/HTML/test.html
+++ b/Web_Fund_Dec2021/HTML/test.html
@@ -14,6 +14,38 @@
 
     <h2>This is the last test.</h2>
 
+    <ul>
+        <li>Dog</li>
+        <li>Cat</li>
+        <li>Dragon</li>
+        <li>Monkey</li>
+    </ul>
+
+    <ol>
+        <li>Dog</li>
+        <li>Cat</li>
+        <li>Dragon</li>
+        <li>Monkey</li>
+    </ol>
+
+    <table>
+        <tr>
+            <th>Movie</th>
+            <th>Year</th>
+            <th>Rating</th>
+        </tr>
+        <tr>
+            <td>Up</td>
+            <td>2009</td>
+            <td>PG</td>
+        </tr>
+        <tr>
+            <td>The Matrix</td>
+            <td>1999</td>
+            <td>R</td>
+        </tr>
+    </table>
+
 
 </body>
 </html>
