--- a/Web_Fund_Dec2021/HTML/test.html
+++ b/Web_Fund_Dec2021/HTML/test.html
@@ -45,6 +45,10 @@
             <td>R</td>
         </tr>
     </table>
+    
+    <img src="panda.jpg" alt="panda pic">
+
+    <video src="test.mp4" controls autoplay loop muted></video>
 
 
 </body>
