--- a/Web_Fund_Dec2021/HTML/form.html
+++ b/Web_Fund_Dec2021/HTML/form.html
@@ -68,9 +68,8 @@
             </select>
         </div>
         <div>
-            <input type="checkbox" name="offers" 
-            id="offers" checked >
-            <label for="offers">Yes, I would like 
+            <input type="checkbox" checked >
+            <label>Yes, I would like 
             to receive periodic email updates</label>
         </div>
         <input type="submit" value="Create Account" >
