--- a/Web_Fund_Dec2021/HTML/form.html
+++ b/Web_Fund_Dec2021/HTML/form.html
@@ -54,7 +54,7 @@
             <input type="radio" value="other">
         </div>
         <div>
-            <lable>A short description about myself:</lable>
+            <label>A short description about myself:</label>
             <textarea></textarea>
         </div>
         <div>
