--- a/Web_Fund_Dec2021/WebPage1/index.html
+++ b/Web_Fund_Dec2021/WebPage1/index.html
@@ -9,13 +9,11 @@
 </head>
 <body>
     
-    <h1>Hello this is text</h1>
+    <h1>My<span class="voidstar">Cloud</span></h1>
 
-    <h2>Hello number 2</h2>
+    <h2>Completed Projects:</h2>
 
-    <h2 id="voidstar">Hello number 3</h2>
-
-    <h2 class="voidstar tall">Hello number 4</h2>
+    <h3 id="voidstar">Contact Us</h2>
 
 </body>
 </html>
