--- a/Web_Fund_Dec2021/FlagWebPage/index.html
+++ b/Web_Fund_Dec2021/FlagWebPage/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Flag of France</h1>
-    <div id ="flag">
+    <h1>Flag of France + 1</h1>
+    <div class ="flag">
+        <div class="strips blue"></div>
+        <div class="strips"></div>
+        <div class="strips red"></div>
+    </div>
+    <div class ="flag">
         <div class="strips blue"></div>
         <div class="strips"></div>
         <div class="strips red"></div>
